tests/fail/registering/duplicated ids for coercion.mm0
    sort s ; 
    sort t ; 
    sort u ; 
coercion c : s > t ; 
coercion c : s > u ; 
